--- a/cdn/app.json
+++ b/cdn/app.json
@@ -26,6 +26,7 @@
 	"donutchart": "https://cdn.componentator.com/uibuilder/donutchart-v1/editor.html",
 	"dropdown": "https://cdn.componentator.com/uibuilder/dropdown-v1/editor.html",
 	"enable": "https://cdn.componentator.com/uibuilder/enable-v1/editor.html",
+	"externalimage": "https://cdn.componentator.com/uibuilder/externalimage-v1/editor.html",
 	"fileuploader": "https://cdn.componentator.com/uibuilder/fileuploader-v1/editor.html",
 	"flowinput": "https://cdn.componentator.com/uibuilder/flowinput-v1/editor.html",
 	"flowoutput": "https://cdn.componentator.com/uibuilder/flowoutput-v1/editor.html",
@@ -34,6 +35,7 @@
 	"headline": "https://cdn.componentator.com/uibuilder/headline-v1/editor.html",
 	"hiddencontainer": "https://cdn.componentator.com/uibuilder/hiddencontainer-v1/editor.html",
 	"hr": "https://cdn.componentator.com/uibuilder/hr-v1/editor.html",
+	"html": "https://cdn.componentator.com/uibuilder/html-v1/editor.html",
 	"icon": "https://cdn.componentator.com/uibuilder/icon-v1/editor.html",
 	"image": "https://cdn.componentator.com/uibuilder/image-v1/editor.html",
 	"infocard": "https://cdn.componentator.com/uibuilder/infocard-v1/editor.html",
